# modern-events

./: CMakeLists.txt
cmake/: add_subdirectories.cmake
components_metaprogramming/: main.cpp
typed_event/: CMakeLists.txt  main.cpp
